--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,7 +3,7 @@
     Author: Shinyu
     Developer: Ragul CS
     contact: ragulcs15@gmail.com
-    Version: 0.0.1
+    Version: 0.0.2
 */
 html,
 body {
@@ -17,7 +17,13 @@ body {
   padding: 0;
 }
 
-.center, .apps .col-md-5, .apps .apps-bottom, .articles .article-1, .articles .article-2, .categories .categories-title, .vetting .wrapper, .bottom-banner .apps {
+p {
+  font-family: "IBM Plex Serif", serif;
+  font-size: 20px;
+  line-height: 35px;
+}
+
+.center, .apps, .apps .col-md-5, .apps .apps-bottom, .articles .article-1, .articles .article-2, .connecting, .categories, .categories .categories-title, .walked, .vetting, .vetting .wrapper, .walk-through, .intro, .bottom-banner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -27,6 +33,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.view-height, .apps, .connecting, .categories, .walked, .vetting, .banner, .walk-through, .bridge-banner, .intro, .bottom-banner {
+  height: 100vh;
+  min-height: 600px;
 }
 
 img {
@@ -40,10 +51,12 @@ header {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../assets/images/header.png");
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position-y: 00%;
   min-height: 500px;
   color: #ffffff;
   text-align: center;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
 }
 
 header h1 {
@@ -61,10 +74,6 @@ header h2 {
   font-weight: 400;
   font-size: 40px;
   letter-spacing: 3px;
-}
-
-.apps {
-  padding: 10rem 0 10rem 0;
 }
 
 .apps .col-md-5 {
@@ -97,7 +106,7 @@ header h2 {
   height: inherit;
 }
 
-.apps p {
+.apps h4 {
   font-family: "IBM Plex Serif", serif;
   font-size: 24px;
   margin-right: auto;
@@ -117,43 +126,38 @@ header h2 {
 }
 
 .articles .col-md-6 img {
-  width: 80%;
+  width: 100%;
 }
 
 .articles .col-md-6 h2 {
-  font-size: 24px;
+  font-size: 22px;
   font-family: "IBM Plex Serif", serif;
   font-weight: 400;
 }
 
 .articles .col-md-6 h1 {
-  font-size: 40px;
+  font-size: 28px;
   font-family: "IBM Plex Serif", serif;
   font-weight: 700;
   margin: 30px 0;
 }
 
-.articles .col-md-6 p {
-  font-family: "IBM Plex Serif", serif;
-  font-size: 20px;
-  line-height: 35px;
-}
-
 .articles .article-1 {
   background: #fdfcfb;
-  padding: 0 10px;
-  padding: 5rem 0;
+  padding: 4rem 0;
 }
 
 .articles .article-2 {
   background: #fbfcfc;
-  padding: 0 10px;
-  padding: 5rem 0;
+  padding: 4rem 0;
 }
 
 .connecting {
-  padding: 5rem 0;
   color: #47433b;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .connecting h2 {
@@ -175,10 +179,7 @@ header h2 {
 }
 
 .connecting .col-md-4 .connecting-card p {
-  font-family: "IBM Plex Serif", serif;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 30px;
 }
 
 .carousel {
@@ -204,8 +205,6 @@ header h2 {
 }
 
 .carousel .connecting-card p {
-  font-family: "IBM Plex Serif", serif;
-  font-weight: 400;
   font-size: 16px;
 }
 
@@ -230,10 +229,11 @@ header h2 {
 }
 
 .categories {
-  padding: 5rem 0;
+  height: auto;
+  padding: 5vh 0;
   color: #47433b;
   font-family: "IBM Plex Serif", serif;
-  background: #fdfcfb;
+  background: #fffdf8;
 }
 
 .categories .col-md-6 h1 {
@@ -251,13 +251,7 @@ header h2 {
   font-size: 32px;
 }
 
-.categories .col-md-6 .category-card p {
-  font-size: 20px;
-  line-height: 35px;
-}
-
 .walked {
-  padding: 5rem 0;
   color: #47433b;
   font-family: "IBM Plex Serif", serif;
 }
@@ -273,12 +267,6 @@ header h2 {
   margin-bottom: 30px;
 }
 
-.walked .col-md-6 p {
-  font-family: "IBM Plex Serif", serif;
-  font-size: 20px;
-  line-height: 35px;
-}
-
 .walked .col-md-6 p span {
   font-style: italic;
 }
@@ -290,9 +278,9 @@ header h2 {
 .vetting {
   font-family: "IBM Plex Serif", serif;
   background: #fdfcfb;
-  padding: 10rem 0;
   color: #47433b;
   overflow: hidden;
+  background: #fffdf8;
 }
 
 .vetting .mobile-wrapper {
@@ -306,12 +294,11 @@ header h2 {
   font-weight: 700;
   margin-bottom: 50px;
   text-align: center;
+  font-size: 28px;
 }
 
 .vetting p {
   margin: auto 50px;
-  font-size: 20px;
-  line-height: 35px;
 }
 
 .vetting p span {
@@ -320,13 +307,10 @@ header h2 {
 
 .vetting img {
   width: 300px;
-  margin: 50px auto 0 auto;
+  margin: 50px auto 50px auto;
 }
 
 .banner {
-  height: 80vh;
-  max-height: 800px;
-  min-height: 500px;
   background: url("../assets/images/article-section-4.png");
   background-size: cover;
   background-position: center;
@@ -336,26 +320,18 @@ header h2 {
 .banner h3 {
   font-family: "IBM Plex Serif", serif;
   color: #ffffff;
-  font-size: 36px;
-  line-height: 50px;
 }
 
 .walk-through {
-  padding: 5rem 0;
   color: #47433b;
   font-family: "IBM Plex Serif", serif;
+  background: #fbfcfc;
 }
 
 .walk-through .col-md-6 h1 {
   font-weight: 700;
   font-size: 28px;
   margin-bottom: 20px;
-}
-
-.walk-through .col-md-6 p {
-  font-family: "IBM Plex Serif", serif;
-  font-size: 20px;
-  line-height: 35px;
 }
 
 .walk-through .col-md-6 p span {
@@ -368,9 +344,6 @@ header h2 {
 }
 
 .bridge-banner {
-  height: 80vh;
-  max-height: 800px;
-  min-height: 500px;
   background: url("../assets/images/mid-level-banner.png");
   background-size: cover;
   background-position: center;
@@ -382,22 +355,18 @@ header h2 {
   font-family: "IBM Plex Serif", serif;
   font-style: italic;
   font-size: 36px;
-  line-height: 50px;
 }
 
 .bridge-banner p {
-  font-family: "IBM Plex Serif", serif;
-  font-size: 20px;
-  line-height: 35px;
   width: 50%;
 }
 
 .intro {
   position: relative;
-  padding: 10rem 0;
+  overflow-x: hidden;
   color: #47433b;
   font-family: "IBM Plex Serif", serif;
-  overflow: hidden;
+  background: #fdfcfb;
 }
 
 .intro .col-md-5 {
@@ -405,7 +374,7 @@ header h2 {
 }
 
 .intro .col-md-5 img {
-  width: 300px;
+  width: 60%;
 }
 
 .intro .col-md-7 h2 {
@@ -414,22 +383,19 @@ header h2 {
 
 .intro .col-md-7 h1 {
   font-weight: 700;
-  font-size: 32px;
+  font-size: 28px;
   margin: 40px 0;
 }
 
-.intro .col-md-7 p {
-  font-size: 20px;
-  line-height: 35px;
-  font-family: "IBM Plex Serif", serif;
-}
-
 .bottom-banner {
-  padding: 5rem 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .bottom-banner img {
-  width: 600px;
+  width: 400px;
 }
 
 .bottom-banner h2 {
@@ -438,11 +404,7 @@ header h2 {
   color: #47433b;
 }
 
-.bottom-banner .apps {
-  padding: 0;
-}
-
-.bottom-banner .apps img {
+.bottom-banner .row img {
   width: 150px !important;
   margin: 10px;
 }
@@ -455,7 +417,7 @@ footer {
 
 footer h2 {
   font-family: "IBM Plex Serif", serif;
-  font-size: 32px;
+  font-size: 22px;
   font-weight: 700;
   margin-bottom: 30px;
 }
@@ -498,23 +460,16 @@ footer textarea {
 }
 
 @media (max-width: 1200px) {
-  .apps p {
+  p {
     font-size: 20px;
+    line-height: 30px;
   }
   .articles .col-md-6 h2 {
     font-size: 22px;
   }
-  .articles .col-md-6 p {
-    font-size: 18px;
-    line-height: 30px;
-  }
   .connecting h2 {
     font-size: 28px;
     line-height: 35px;
-  }
-  .connecting .col-md-4 .connecting-card p {
-    font-size: 16px;
-    line-height: 30px;
   }
   .categories .col-md-6 .category-card {
     font-size: 18px;
@@ -523,38 +478,9 @@ footer textarea {
   .walked .col-md-6 h2 {
     font-size: 28px;
   }
-  .walked .col-md-6 p {
-    font-size: 18px;
-    line-height: 30px;
-  }
-  .vetting p {
-    font-size: 18px;
-    line-height: 30px;
-  }
-  .walk-through .col-md-6 p {
-    font-size: 18px;
-    line-height: 30px;
-  }
-  .bridge-banner p {
-    font-size: 18px;
-    line-height: 30px;
-  }
-  .banner {
-    padding: 0 2rem 5rem;
-  }
-  .banner h3 {
-    font-size: 32px;
-    line-height: 40px;
-  }
   .intro {
     font-size: 18px;
     line-height: 30px;
-  }
-  .bottom-banner img {
-    width: 400px;
-  }
-  footer h2 {
-    font-size: 28px;
   }
 }
 
@@ -565,12 +491,12 @@ footer textarea {
   .connecting .col-md-4 .connecting-card {
     padding: 10px 20px;
   }
+  .intro .col-md-5 img {
+    width: 70%;
+  }
 }
 
 @media (max-width: 768px) {
-  .apps {
-    padding: 10rem 0 10rem;
-  }
   .apps .spacer {
     display: none;
   }
@@ -617,7 +543,7 @@ footer textarea {
     display: block;
   }
   .categories {
-    padding: 7rem 0;
+    margin-top: 60px;
   }
   .categories .col-md-6 {
     -webkit-box-pack: start;
@@ -635,6 +561,10 @@ footer textarea {
     font-size: 22px;
     margin-bottom: 10px;
   }
+  .walked {
+    height: auto;
+    padding: 5vh 0;
+  }
   .walked .col-md-6 img {
     width: 100%;
     margin-bottom: 20px;
@@ -642,9 +572,6 @@ footer textarea {
   .walked .col-md-6 h2 {
     margin-top: 30px;
     font-size: 36px;
-  }
-  .vetting {
-    padding: 5rem 0 7rem 0;
   }
   .vetting .wrapper {
     display: none;
@@ -662,7 +589,8 @@ footer textarea {
     text-align: center;
   }
   .walk-through {
-    padding: 5rem 0;
+    padding: 5vh 0;
+    height: auto;
   }
   .walk-through .col-md-6 img {
     width: 100%;
@@ -685,17 +613,15 @@ footer textarea {
     margin-top: 20px;
   }
   .intro {
-    padding: 5rem 0;
+    height: auto;
+    padding: 2rem 0;
   }
   .intro .col-md-5 img {
-    width: 200px;
-    margin-bottom: 40px;
+    width: 40%;
+    margin-bottom: 50px;
   }
   .intro .col-md-7 h1 {
     font-size: 36px;
-  }
-  .bottom-banner {
-    padding: 5rem 0;
   }
   .bottom-banner .apps {
     -ms-flex-wrap: wrap !important;
@@ -718,17 +644,8 @@ footer textarea {
   .apps .col-md-5 img {
     width: 90%;
   }
-  .categories {
-    padding: 5rem 0;
-  }
   .bottom-banner {
     padding: 3rem 0;
-  }
-  .bridge-banner h3 {
-    font-size: 32px;
-  }
-  .bottom-banner {
-    width: 400px;
   }
 }
 
@@ -738,9 +655,6 @@ footer textarea {
   }
   header h2 {
     font-size: 32px;
-  }
-  .apps {
-    padding: 5rem 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
