--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -86,7 +86,7 @@ header {
   h2 {
     font-family: $sans;
     font-weight: 400;
-    font-size: 40px;
+    font-size: 75px;
     letter-spacing: 3px;
   }
 }
@@ -151,21 +151,26 @@ header {
 .articles {
   .col-md-6 {
     img {
-      width: 100%;
+      width: 450px;
     }
     color: $text;
 
     h2 {
-      font-size: 22px;
+      font-size: 28px;
       font-family: $IBM;
       font-weight: 400;
     }
 
     h1 {
-      font-size: 28px;
+      font-size: 50px;
       font-family: $IBM;
       font-weight: 700;
       margin: 30px 0;
+    }
+
+    p {
+      font-size: 28px;
+      line-height: 40px;
     }
   }
 
@@ -561,8 +566,31 @@ footer {
   }
 }
 @media (max-width: 991px) {
+  .header{
+    h2{
+      font-size: 50px;
+    }
+  }
   .apps {
     .col-md-5 {
+      img {
+        width: 300px;
+      }
+    }
+  }
+
+  .articles {
+    .col-md-6 {
+      h1 {
+        font-size: 40px;
+      }
+      h2 {
+        font-size: 22px;
+      }
+      p {
+        font-size: 20px;
+        line-height: 35px;
+      }
       img {
         width: 300px;
       }
