--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -149,28 +149,28 @@ header {
 
 //ARTICLES
 .articles {
+  color: $text;
   .col-md-6 {
     img {
-      width: 450px;
+      width: 100%;
     }
-    color: $text;
 
     h2 {
-      font-size: 28px;
+      font-size: 50px;
       font-family: $IBM;
       font-weight: 400;
     }
 
     h1 {
-      font-size: 50px;
+      font-size: 56px;
       font-family: $IBM;
       font-weight: 700;
       margin: 30px 0;
     }
 
     p {
-      font-size: 28px;
-      line-height: 40px;
+      font-size: 48px;
+      line-height: 60px;
     }
   }
 
@@ -196,7 +196,7 @@ header {
 
   h2 {
     font-family: $IBM;
-    font-size: 40px;
+    font-size: 47px;
     margin-bottom: 50px;
     line-height: 60px;
   }
@@ -206,14 +206,20 @@ header {
       width: 100%;
       padding: 10px 40px;
 
+      img {
+        width: 180px;
+      }
+
       h2 {
         font-family: $IBM;
         font-weight: bold;
-        margin: 30px auto 10px auto;
+        margin: 40px auto 10px auto;
+        font-size: 56px;
       }
 
       p {
         font-weight: 400;
+        font-size: 30px;
       }
     }
   }
@@ -278,8 +284,8 @@ header {
   .col-md-6 {
     h1 {
       font-weight: 700;
-      font-size: 50px;
-      line-height: 55px;
+      font-size: 56px;
+      line-height: 60px;
       text-align: left;
     }
 
@@ -287,12 +293,12 @@ header {
       margin: 35px 0;
 
       h1 {
-        font-size: 45px;
+        font-size: 56px;
       }
 
       p {
-        font-size: 28px;
-        line-height: 40px;
+        font-size: 38px;
+        line-height: 50px;
       }
     }
   }
@@ -316,17 +322,18 @@ header {
   .col-md-6 {
     h2 {
       font-weight: 700;
-      font-size: 50px;
+      font-size: 56px;
       margin-bottom: 30px;
     }
 
     p {
-      font-size: 28px;
-      line-height: 40px;
+      font-size: 42px;
+      line-height: 60px;
       span {
         font-style: italic;
       }
     }
+
     img {
       width: 100%;
     }
@@ -354,15 +361,15 @@ header {
 
   h2 {
     font-weight: 700;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
     text-align: center;
-    font-size: 50px;
+    font-size: 56px;
   }
 
   p {
     margin: auto 50px;
-    font-size: 28px;
-    line-height: 40px;
+    font-size: 38px;
+    line-height: 50px;
 
     span {
       font-style: italic;
@@ -370,8 +377,8 @@ header {
   }
 
   img {
-    width: 300px;
-    margin: 50px auto 50px auto;
+    width: 50%;
+    margin: 100px auto 50px auto;
   }
 }
 
@@ -381,12 +388,12 @@ header {
   background: url("../assets/images/article-section-4.png");
   background-size: cover;
   background-position: center;
-  padding-bottom: 50px;
+  padding-bottom: 120px;
 
   h3 {
     font-family: $IBM;
     color: $white;
-    font-size: 50px;
+    font-size: 62px;
   }
 }
 
@@ -401,13 +408,13 @@ header {
   .col-md-6 {
     h1 {
       font-weight: 700;
-      font-size: 50px;
+      font-size: 56px;
       margin-bottom: 20px;
     }
 
     p {
-      font-size: 28px;
-      line-height: 40px;
+      font-size: 38px;
+      line-height: 60px;
       span {
         font-style: italic;
       }
@@ -430,13 +437,14 @@ header {
   h3 {
     font-family: $IBM;
     font-style: italic;
-    font-size: 50px;
+    font-size: 63px;
+    margin-bottom: 20px;
   }
 
   p {
-    width: 50%;
-    font-size: 28px;
-    line-height: 40px;
+    width: 70%;
+    font-size: 48px;
+    line-height: 70px;
   }
 }
 
@@ -458,18 +466,18 @@ header {
 
   .col-md-7 {
     h2 {
-      font-size: 28px;
+      font-size: 50px;
     }
 
     h1 {
       font-weight: 700;
-      font-size: 50px;
+      font-size: 56px;
       margin: 40px 0;
     }
 
     p {
-      font-size: 28px;
-      line-height: 40px;
+      font-size: 48px;
+      line-height: 60px;
     }
   }
 }
@@ -480,14 +488,14 @@ header {
   flex-direction: column;
 
   img {
-    width: 400px;
+    width: 700px;
   }
 
   h2 {
     font-family: $IBM;
     margin: 20px auto 40px auto;
     color: $text;
-    font-size: 50px;
+    font-size: 60px;
   }
 
   .row {
@@ -505,7 +513,7 @@ footer {
 
   h2 {
     font-family: $IBM;
-    font-size: 50px;
+    font-size: 56px;
     font-weight: 700;
     margin-bottom: 30px;
   }
@@ -516,13 +524,13 @@ footer {
 
   label {
     font-family: $IBM;
-    font-size: 28px;
+    font-size: 48px;
   }
 
   .form-control {
     border-color: $border;
     font-size: 14px;
-    padding: 10px;
+    padding: 30px 12px;
     border-radius: 7px;
     -webkit-border-radius: 7px;
     -moz-border-radius: 7px;
@@ -547,43 +555,152 @@ footer {
 }
 
 //Media Query for responsivenes
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1500px !important;
+  }
+}
 @media (max-width: 1200px) {
-  p {
-    font-size: 20px;
-    line-height: 30px;
+  .container {
+    max-width: 1140px !important;
   }
   .articles {
     .col-md-6 {
+      img {
+        width: 100%;
+      }
       h2 {
-        font-size: 22px;
+        font-size: 28px;
+      }
+      h1 {
+        font-size: 36px;
+      }
+      p {
+        font-size: 28px;
+        line-height: 35px;
       }
     }
   }
   .connecting {
     h2 {
-      font-size: 32px;
-      line-height: 35px;
+      font-size: 36px;
+      line-height: 40px;
+    }
+
+    .col-md-4 {
+      .connecting-card {
+        h2 {
+          font-size: 36px;
+        }
+        p {
+          font-size: 28px;
+          line-height: 40px;
+        }
+      }
     }
   }
   .categories {
     .col-md-6 {
+      h1 {
+        font-size: 36px;
+        line-height: 50px;
+      }
       .category-card {
-        font-size: 18px;
-        line-height: 30px;
+        h1 {
+          font-size: 36px;
+          line-height: 50px;
+        }
+        p {
+          font-size: 28px;
+          line-height: 40px;
+        }
       }
     }
   }
+  .walked {
+    .col-md-6 {
+      h2 {
+        font-size: 36px;
+      }
+      p {
+        font-size: 28px;
+        line-height: 40px;
+      }
+    }
+  }
+  .vetting {
+    h2 {
+      font-size: 36px;
+    }
+    p {
+      font-size: 28px;
+      line-height: 40px;
+    }
+  }
+  .walk-through {
+    .col-md-6 {
+      h1 {
+        font-size: 36px;
+      }
+
+      p {
+        font-size: 28px;
+        line-height: 40px;
+      }
+    }
+  }
+  .bridge-banner {
+    h3 {
+      font-size: 50px;
+    }
+    p {
+      font-size: 28px;
+      line-height: 40px;
+    }
+  }
   .intro {
-    font-size: 18px;
-    line-height: 30px;
+    .col-md-7 {
+      h2 {
+        font-size: 28px;
+      }
+      h1 {
+        font-size: 36px;
+      }
+      p {
+        font-size: 28px;
+        line-height: 35px;
+      }
+    }
+  }
+  .bottom-banner {
+    img {
+      width: 500px;
+    }
+    h2 {
+      font-size: 50px;
+    }
+  }
+  footer {
+    h2 {
+      font-size: 36px;
+    }
+    label {
+      font-size: 28px;
+    }
+
+    .form-control {
+      padding: 15px 12px;
+    }
   }
 }
+
 @media (max-width: 991px) {
   .header {
     h2 {
       font-size: 50px;
     }
   }
+
   .apps {
     .col-md-5 {
       img {
@@ -611,9 +728,6 @@ footer {
       p {
         font-size: 20px;
         line-height: 35px;
-      }
-      img {
-        width: 300px;
       }
     }
   }
@@ -722,12 +836,17 @@ footer {
   }
 
   .banner {
-    font-size: 36px;
+    height: 70vh;
+    padding-bottom: 60px;
+
+    h3 {
+      font-size: 40px;
+    }
   }
 
   footer {
     h2 {
-      font-size: 22px;
+      font-size: 36px;
     }
 
     .form-control {
@@ -920,6 +1039,10 @@ footer {
       }
     }
   }
+
+  footer {
+    padding: 0 2rem;
+  }
 }
 
 @media (max-width: 501px) {
@@ -928,11 +1051,20 @@ footer {
       font-size: 80px;
     }
   }
+
   .apps {
     .col-md-5 {
       img {
         width: 90%;
       }
+    }
+  }
+
+  .banner {
+    height: 50vh;
+
+    h3 {
+      font-size: 36px;
     }
   }
 
